--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lucide-vue-next": "^0.544.0",
     "motion-v": "^1.7.4",
     "nuxt": "^4.1.2",
+    "nuxt-lucide-icons": "^2.0.0",
     "reka-ui": "^2.5.1",
     "shadcn-nuxt": "^2.2.0",
     "tailwind-merge": "^3.3.1",
