--- a/package.json
+++ b/package.json
@@ -20,13 +20,15 @@
     "motion-v": "^1.7.4",
     "nuxt": "^4.1.2",
     "nuxt-lucide-icons": "^2.0.0",
-    "reka-ui": "^2.5.1",
+    "reka-ui": "^2.6.0",
     "shadcn-nuxt": "^2.2.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13",
     "tw-animate-css": "^1.4.0",
+    "v-gsap-nuxt": "^1.4.4",
     "vue": "^3.5.22",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vue3-marquee": "^4.2.2"
   },
   "devDependencies": {
     "@nuxtjs/color-mode": "^3.5.2",
